// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RedirectPage /> matches snapshot 1`] = `
<body>
  <div>
    <div
      class="sc-bdfBwQ liRWSq"
    >
      <div
        class="sc-gsTCUz juXqCF"
      >
        <h1
          class="sc-dlfnbm fUAJrE"
        >
          Dziękujemy za przesłanie wniosku! Szukamy dla Ciebie idealnej oferty.
        </h1>
        <h3
          class="sc-hKgILt cJuSUN"
        >
          Zostaniesz przekierowany za 
          <span
            class="sc-eCssSg egxaJx"
          >
            3
            s
          </span>
        </h3>
      </div>
    </div>
  </div>
</body>
`;

exports[`<RedirectPage /> matches snapshot with props 1`] = `
<body>
  <div>
    <div
      class="sc-bdfBwQ liRWSq"
    >
      <div
        class="sc-gsTCUz juXqCF"
      >
        <img
          class="sc-jSgupP fzWcin"
          src="logo.png"
        />
        <h1
          class="sc-dlfnbm fUAJrE"
        >
          header text
        </h1>
        <h3
          class="sc-hKgILt cJuSUN"
        >
          Zostaniesz przekierowany za 
          <span
            class="sc-eCssSg egxaJx"
          >
            3
            s
          </span>
        </h3>
        <img
          class="sc-gKsewC hzTIyX"
          src="main.png"
        />
      </div>
    </div>
  </div>
</body>
`;

exports[`<RedirectPage /> matches snapshot with redirect 1`] = `
<body>
  <div>
    <div
      class="sc-bdfBwQ gODjNY"
    >
      <div
        class="sc-gsTCUz juXqCF"
      >
        <h1
          class="sc-dlfnbm fUAJrE"
        >
          thank you text
        </h1>
        <h3
          class="sc-hKgILt cJuSUN"
        >
          Zostaniesz przekierowany za 
          <span
            class="sc-eCssSg egxaJx"
          >
            0
            s
          </span>
        </h3>
      </div>
    </div>
  </div>
</body>
`;
